kub_github/my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-api
spec:
  type: NodePort
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8000
  selector:
    app: user-api
