kub_github/my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
spec:
  defaultBackend:
    service:
      name: user-service
      port:
        number: 8001
